force-app/main/default/objects/SD_Excel_Table__c.object
<CustomObject>
    <fields>
        <fullName>Table1__c</fullName>
        <label>Table1</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Table2__c</fullName>
        <label>Table2</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Table3__c</fullName>
        <label>Table3</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>SD Excel Table</label>
    <nameField>
        <displayFormat>SDExcel-{0000}</displayFormat>
        <label>SD Excel Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>